--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ theme: hexo-theme-matery-master # 默认值：landscape
 
 deploy:
   type: git
-  repo: https://github.com/Co0lBreez/Co0lBreez.github.io.git
+  repository: https://github.com/Co0lBreez/Co0lBreez.github.io.git
   branch: master
 
 ## 搜索插件
