--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle: ''
-description: ''
+title: 枕头递我一下
+subtitle: 「枕头递我一下」的小站
+description: 基于hexo搭建的个人Blog
 keywords:
-author: John Doe
+author: 枕头递我一下
 language: zh-CN
-timezone: ''
+timezone: Asia/Shanghai
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
@@ -102,7 +102,7 @@ theme: hexo-theme-matery-master # 默认值：landscape
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 
-deploy:
+deploy: 
   type: git
   repository: https://github.com/Co0lBreez/Co0lBreez.github.io.git
   branch: master
