--- a/_config.yml
+++ b/_config.yml
@@ -102,10 +102,11 @@ theme: hexo-theme-matery-master # 默认值：landscape
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 
-deploy: 
+deploy:  
   type: git
-  repository: https://github.com/Co0lBreez/Co0lBreez.github.io.git
+  repo: https://github.com/Co0lBreez/Co0lBreez.github.io.git
   branch: master
+  message: 我崩溃了(〃￣︶￣)
 
 ## 搜索插件
 search:
