--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "version": "6.2.0"
   },
   "dependencies": {
-    "@babel/core": "^7.18.9",
+    "@babel/core": "^7.18.10",
     "babel-preset-es2015": "^6.24.1",
     "del": "^7.0.0",
     "gulp": "^4.0.2",
@@ -43,6 +43,7 @@
     "hexo-renderer-stylus": "^2.1.0",
     "hexo-server": "^3.0.0",
     "hexo-tag-aplayer": "^3.0.4",
+    "hexo-tag-dplayer": "^0.3.3",
     "hexo-theme-landscape": "^0.0.3",
     "hexo-wordcount": "^6.0.1",
     "live2d-widget-model-hibiki": "^1.0.5",
