--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "server": "hexo server"
   },
   "hexo": {
-    "version": "6.2.0"
+    "version": "6.3.0"
   },
   "dependencies": {
     "@babel/core": "^7.18.10",
@@ -45,6 +45,7 @@
     "hexo-tag-aplayer": "^3.0.4",
     "hexo-tag-dplayer": "^0.3.3",
     "hexo-theme-landscape": "^0.0.3",
+    "hexo-util": "^3.0.1",
     "hexo-wordcount": "^6.0.1",
     "live2d-widget-model-hibiki": "^1.0.5",
     "packagename": "^2.0.1"
